# SDL2_XML_Renderer

./: CMakeLists.txt  README.md
CMakeModules/: FindSDL2.cmake  FindSDL2_image.cmake
Resources/IQM/: dice.iqm  insideoutsphere.iqm  spherenormal.iqm
Resources/Scenes/: TestScene.xml
Resources/Shaders/: envMap.frag  envMap.vert  frag.glsl  height.frag  nrmMap.frag  nrmMap.vert  stripes.frag  stripes.vert  testFrag.glsl  testVert.glsl  vert.glsl
include/: Camera.h  GL_Includes.h  Geometry.h  KeyboardManager.h  Light.h  Material.h  MouseManager.h  QuatVec.h  Scene.h  Shader.h  Textures.h
source/: Camera.cpp  Geometry.cpp  KeyboardManager.cpp  Light.cpp  Material.cpp  MouseManager.cpp  QuatVec.cpp  Scene.cpp  Shader.cpp  Textures.cpp  main.cpp
